update grpc-gateway and add updated proto definitions
